--- a/default.conf
+++ b/default.conf
@@ -62,7 +62,7 @@ bot_car_serial_prot_name=/dev/ttyUSB1
 stm32_serial_prot_name=/dev/ttyUSB0
 
 # 首次舵机转动方向（F正，R反）
-first_motor_rotation=R
+first_motor_rotation=F
 
 # 温度阈值
 temperature_threshold=30.0
