--- a/default.conf
+++ b/default.conf
@@ -56,6 +56,8 @@ microphone_name=plughw:2,0
 # 串口名配置
 # 机械臂串口名
 bot_arm_serial_prot_name=/dev/ttyACM0
+# 机械臂 MAC 地址
+bot_arm_mac_address=08:B6:1F:C1:DB:1A
 # 底盘车串口名
 bot_car_serial_prot_name=/dev/ttyUSB1
 # STM32串口名
@@ -63,6 +65,8 @@ stm32_serial_prot_name=/dev/ttyUSB0
 
 # 首次舵机转动方向（F正，R反）
 first_motor_rotation=F
+# 电机速度
+motor_speed=20000
 
 # 温度阈值
 temperature_threshold=30.0
