--- a/default.conf
+++ b/default.conf
@@ -58,7 +58,7 @@ microphone_name=plughw:2,0
 bot_arm_serial_prot_name=/dev/ttyACM0
 # 机械臂 MAC 地址
 left_bot_arm_mac_address=08:B6:1F:C1:DB:1A
-right_bot_arm_mac_address=08:B6:1F:C1:DB:1A
+right_bot_arm_mac_address=08:3A:F2:6A:47:8A
 # 底盘车串口名
 bot_car_serial_prot_name=/dev/ttyUSB1
 # STM32串口名
