--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .vscode
 .idea
 
+.editorconfig
+
 cmake-build-debug
 
 build
@@ -18,6 +20,7 @@ build1
 /src/ref
 
 /src/python/__pycache__
+/src/python/logs
 /src/python/protobuf/__pycache__
 
 
