--- a/default.conf
+++ b/default.conf
@@ -58,7 +58,7 @@ microphone_name=plughw:2,0
 bot_arm_serial_prot_name=/dev/ttyACM0
 # 机械臂 MAC 地址
 left_bot_arm_mac_address=08:B6:1F:C1:DB:1A
-right_bot_arm_mac_address=08:3A:F2:6A:47:8A
+right_bot_arm_mac_address=24:D7:EB:38:AB:8A
 # 底盘车串口名
 bot_car_serial_prot_name=/dev/ttyUSB1
 # STM32串口名
@@ -67,7 +67,7 @@ stm32_serial_prot_name=/dev/ttyUSB0
 # 首次舵机转动方向（F正，R反）
 first_motor_rotation=F
 # 电机速度
-motor_speed=20000
+motor_speed=16000
 
 # 温度阈值
 temperature_threshold=30.0
