feat: 修复机械臂通信，优化项目结构
修复机械臂6轴角度值转指令值bug，优化项目目录结构，拆分Utility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,17 +36,20 @@ find_package(jsoncpp REQUIRED)
 
 SET(EXECUTABLE_OUTPUT_PATH ../../../ETRS/bin)
 
+file(GLOB_RECURSE UTILITY src/utility/*.cpp)
+
 add_executable(EmergencyTeleoperatedRobotSystem
         src/EmergencyTeleoperatedRobotSystem.cpp 
         src/AzureKinectExtrinsics.cpp 
         src/SoundSourceLocalization.cpp
         src/AzureKinect.cpp 
-        src/utility/Utility.cpp
+        # src/utility/Utility.cpp
         src/Bot.cpp
         src/Network.cpp
         src/Bluetooth.cpp
         src/Device.cpp
         src/Serial.cpp
+        ${UTILITY}
         ${PROTO_SRCS} 
         ${PROTO_HDRS} 
         )
@@ -56,12 +59,13 @@ add_executable(Recon
         src/AzureKinectExtrinsics.cpp 
         src/SoundSourceLocalization.cpp
         src/AzureKinect.cpp 
-        src/utility/Utility.cpp
+        # src/utility/Utility.cpp
         src/Bot.cpp
         src/Network.cpp
         src/Bluetooth.cpp
         src/Device.cpp
         src/Serial.cpp
+        ${UTILITY}
         ${PROTO_SRCS} 
         ${PROTO_HDRS} 
         )
@@ -92,12 +96,13 @@ add_executable(Reconstruction
         src/Reconstruction.cpp 
         src/AzureKinectExtrinsics.cpp 
         src/AzureKinect.cpp 
-        src/utility/Utility.cpp
+        # src/utility/Utility.cpp
         src/Bot.cpp
         src/Network.cpp
         src/Bluetooth.cpp
         src/Device.cpp
         src/Serial.cpp
+        ${UTILITY}
         ${PROTO_SRCS} 
         ${PROTO_HDRS} 
         )
