--- a/default.conf
+++ b/default.conf
@@ -42,6 +42,9 @@ mesh_file_path=ply/final_mesh.ply
 
 # Protobuf 服务器端口
 protobuf_server_port=5001
+# Python 与 C++ 通信端口
+python_port=924
+
 
 # 声源定位参数配置
 # 采样率
@@ -87,7 +90,6 @@ trunc_voxel_multiplier=10.0
 block_resolution=32;
 
 block_count=2500
-
 
 # 里程计参数
 depth_scale = 1000.0
