feat: 添加PythonInvoker 和 Boostt目标检测测试程序

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,29 +31,33 @@ protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO_FILES})
 find_package(Open3D REQUIRED)
 include_directories("/usr/local/include/open3d")
 include_directories("/usr/include/python3.8")
+include_directories("/usr/include/python2.7")
 
 # JSON
 find_package(jsoncpp REQUIRED)
 
 # Boost
-find_package(Boost REQUIRED COMPONENTS python)
+# set(BOOST_ROOT, /usr/local/lib/libboost_python38)
+find_package(Boost 1.83 REQUIRED COMPONENTS python38)
 include_directories(${Boost_INCLUDE_DIRS})
-
-set(PYTHON_DOT_VERSION 3.8)
-set(PYTHON_INCLUDE /usr/include/python3.8)
-set(PYTHON_LIBRARY /usr/lib/python3.8/config-aarch64-linux-gnu)
 
 MESSAGE( STATUS "Boost_INCLUDE_DIRS = ${Boost_INCLUDE_DIRS}.")
 MESSAGE( STATUS "Boost_LIBRARIES = ${Boost_LIBRARIES}.")
 MESSAGE( STATUS "Boost_LIB_VERSION = ${Boost_LIB_VERSION}.")
 
+set(PYTHON_DOT_VERSION 3.8)
+set(PYTHON_INCLUDE /usr/include/python3.8)
+set(PYTHON_LIBRARY /usr/lib/python3.8/config-aarch64-linux-gnu)
+
 SET(EXECUTABLE_OUTPUT_PATH ../../../ETRS/det3d_bin)
+SET(BOOST_DIR /usr/lib/x86_64-linux-gnu/)
 
 file(GLOB_RECURSE UTILITY src/utility/*.cpp)
 
 # 指定头文件目录
 include_directories(include)
 include_directories(include/utility)
+include_directories(include/python_invoker)
 
 add_executable(EmergencyTeleoperatedRobotSystem
         src/EmergencyTeleoperatedRobotSystem.cpp 
@@ -73,48 +77,47 @@ add_executable(EmergencyTeleoperatedRobotSystem
 
 add_executable(Boostt
         src/Boostt.cpp 
+        src/python_invoker/PythonInvoker.cpp
+        src/python_invoker/TypeConverters.cpp
+        ${UTILITY}
         )
 
 target_link_libraries(Boostt
-        ${Boost_LIBRARIES}
-        -lpython3.8
-        )
-
-# add_executable(Compete
-#         src/Compete.cpp 
-#         src/AzureKinectExtrinsics.cpp 
-#         src/SoundSourceLocalization.cpp
-#         src/AzureKinect.cpp 
-#         src/Utility.cpp
-#         src/Bot.cpp
-#         src/Network.cpp
-#         ${PROTO_SRCS} 
-#         ${PROTO_HDRS} 
-#         )
-
-add_executable(Reconstruction
-        src/Reconstruction.cpp 
-        src/AzureKinectExtrinsics.cpp 
-        src/AzureKinect.cpp 
-        # src/utility/Utility.cpp
-        src/Bot.cpp
-        src/Network.cpp
-        src/Bluetooth.cpp
-        src/Device.cpp
-        src/Serial.cpp
-        ${UTILITY}
-        ${PROTO_SRCS} 
-        ${PROTO_HDRS} 
-        )
-
-target_link_libraries(Reconstruction
         k4a::k4a
         ${Open3D_LIBRARIES}
         ${Eigen3_LIBRARIES}
         ${Protobuf_LIBRARIES}
+        ${Boost_LIBRARIES}
         asound
+        fftw3
         bluetooth
+        -lpython3.8
+        -lpython2.7
         )
+
+# add_executable(Reconstruction
+#         src/Reconstruction.cpp 
+#         src/AzureKinectExtrinsics.cpp 
+#         src/AzureKinect.cpp 
+#         # src/utility/Utility.cpp
+#         src/Bot.cpp
+#         src/Network.cpp
+#         src/Bluetooth.cpp
+#         src/Device.cpp
+#         src/Serial.cpp
+#         ${UTILITY}
+#         ${PROTO_SRCS} 
+#         ${PROTO_HDRS} 
+#         )
+
+# target_link_libraries(Reconstruction
+#         k4a::k4a
+#         ${Open3D_LIBRARIES}
+#         ${Eigen3_LIBRARIES}
+#         ${Protobuf_LIBRARIES}
+#         asound
+#         bluetooth
+#         )
 
 
 # target_link_libraries(Compete
@@ -162,185 +165,3 @@ target_link_libraries(EmergencyTeleoperatedRobotSystem
         
 
 
-
-#### CasGeneratePointCloud ####
-# 快速点云
-
-#SET(this_target CasGeneratePointCloud)
-#
-#find_package(k4a REQUIRED)# 后面的target_link_libraries中用到了k4a::k4a
-#
-#find_package(Open3D REQUIRED)
-#
-#find_package(Eigen3 REQUIRED)
-#include_directories("/usr/include/eigen3")
-#
-#add_executable(CasGeneratePointCloud CasGeneratePointCloud.cpp CasAzureKinectExtrinsics.cpp CasPointCloud.cpp)
-#
-#target_link_libraries(CasGeneratePointCloud
-#        k4a::k4a
-#        ${Open3D_LIBRARIES}
-#        )
-
-#### CasGenerateColorPointCloud ####
-# 快速彩色点云
-
-#SET(this_target CasGenerateColorPointCloud)
-#
-#find_package(k4a REQUIRED)# 后面的target_link_libraries中用到了k4a::k4a
-#
-#find_package(Open3D REQUIRED)
-#
-#find_package(Eigen3 REQUIRED)
-#include_directories("/usr/include/eigen3")
-#
-#add_executable(CasGenerateColorPointCloud CasGenerateColorPointCloud.cpp CasAzureKinectExtrinsics.cpp CasPointCloud.cpp)
-#
-#target_link_libraries(CasGenerateColorPointCloud
-#        k4a::k4a
-#        ${Open3D_LIBRARIES}
-#        )
-
-
-#### CasGeneratePointCloud ####
-# 快速点云
-
-#SET(this_target FastPointCloud)
-#
-#find_package(k4a REQUIRED)# 后面的target_link_libraries中用到了k4a::k4a
-#
-#add_executable(FastPointCloud FastPointCloud.cpp)
-#
-#target_link_libraries(FastPointCloud
-#        k4a::k4a
-#        )
-
-
-
-#### CasPointCloud ####
-# Cas的点云处理
-
-#SET(this_target CasPointCloud)
-
-#find_package(Open3D HINTS REQUIRED)
-#set(Open3D_INCLUDE_DIRS "/usr/local/include")
-#include_directories(${Open3D_INCLUDE_DIRS})
-#include_directories(/usr/local/include/open3d/3rdparty)
-#link_directories(${Open3D_LIBRARY_DIRS})
-#
-#add_executable(CasPointCloud CasPointCloud.cpp)
-#
-#target_link_libraries(CasPointCloud ${Open3D_LIBRARIES})
-
-
-
-
-
-
-
-
-#### CasViewingPointCloud ####
-# 点云可视化
-
-# SET(this_target CasViewingPointCloud)
-
-# find_package(Open3D HINTS REQUIRED)
-# include_directories(${Open3D_INCLUDE_DIRS})
-# include_directories(/usr/local/include/open3d/3rdparty)
-# link_directories(${Open3D_LIBRARY_DIRS})
-
-# add_executable(CasViewingPointCloud src/CasViewingPointCloud.cpp)
-
-# target_link_libraries(CasViewingPointCloud ${Open3D_LIBRARIES})
-
-
-
-
-
-#### AzureKinectExtrinsic ####
-# AzureKinect外部参数
-
-#SET(this_target CasAzureKinectExtrinsic)
-#
-#find_package(k4a REQUIRED)
-
-#OPEN3D
-#find_package(Open3D REQUIRED)
-#include_directories(${Open3D_INCLUDE_DIRS})
-#include_directories(/usr/local/include/open3d/3rdparty)
-#link_directories(${Open3D_LIBRARY_DIRS})
-
-#add_executable(CasAzureKinectExtrinsic CasAzureKinectExtrinsics.cpp)
-#
-#target_link_libraries(CasAzureKinectExtrinsic
-#        k4a::k4a
-#        )
-
-
-
-
-
-#### AzureKinectViewer ####
-# 官方示例
-
-#SET(this_target AzureKinectViewer)
-#
-#find_package(k4a REQUIRED)
-#
-##OPEN3D
-#find_package(Open3D REQUIRED)
-#include_directories(${Open3D_INCLUDE_DIRS})
-#include_directories(/usr/local/include/open3d/3rdparty)
-#link_directories(${Open3D_LIBRARY_DIRS})
-#
-#add_executable(AzureKinectViewer AzureKinectViewer.cpp)
-#
-#target_link_libraries(AzureKinectViewer
-#        ${Open3D_LIBRARIES}
-#        k4a::k4a
-#        )
-
-
-
-#### AzureKinectRecord ####
-# 官方示例
-
-#SET(this_target AzureKinectRecord)
-#
-#find_package(k4a REQUIRED)
-#
-##OPEN3D
-#find_package(Open3D REQUIRED)
-#include_directories(${Open3D_INCLUDE_DIRS})
-#include_directories(/usr/local/include/open3d/3rdparty)
-#link_directories(${Open3D_LIBRARY_DIRS})
-#
-#add_executable(AzureKinectRecord AzureKinectRecord.cpp CasAzureKinectExtrinsics.cpp)
-#
-#target_link_libraries(AzureKinectRecord
-#        ${Open3D_LIBRARIES}
-#        k4a::k4a
-#        )
-
-
-
-#### AzureKinectMKVReader ####
-# 官方示例
-
-#SET(this_target AzureKinectMKVReader)
-#
-#find_package(k4a REQUIRED)
-#
-##OPEN3D
-#find_package(Open3D REQUIRED)
-#include_directories(${Open3D_INCLUDE_DIRS})
-#include_directories(/usr/local/include/open3d/3rdparty)
-#link_directories(${Open3D_LIBRARY_DIRS})
-#
-#add_executable(AzureKinectMKVReader AzureKinectMKVReader.cpp)
-#
-#target_link_libraries(AzureKinectMKVReader
-#        k4a::k4a
-#        ${Open3D_LIBRARIES}
-#        )
-#
