--- a/default.conf
+++ b/default.conf
@@ -24,8 +24,10 @@ web_socket_server_port=8080
 # WebSocket服务器路径
 web_socket_server_path=/ws-test
 
-# 是否写入文件
-is_write_file=false
+# 是否保存面片文件
+is_write_mesh_file=false
+# 是否保存点云文件
+is_write_point_cloud_file=false
 # 是否连接服务器
 is_create_server=true
 # 是否连接机械臂
@@ -98,4 +100,5 @@ depth_max = 5.0
 
 depth_diff = 0.07
 
-
+# 目标检测参数
+det3d_voxel_size = 0.03
