feat: 添加旋转识别目标框的函数RotateBoundingBoxes并移除无用文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ add_executable(EmergencyTeleoperatedRobotSystem
 
 add_executable(Boostt
         src/Boostt.cpp 
+        src/ObjectDetection.cpp
         src/python_invoker/PythonInvoker.cpp
         ${UTILITY}
         )
